# Bloodborne-save-editor

./: .gitignore  README.md  armors.json  coverage.sh  index.html  items.json  package-lock.json  package.json  testsave.tags  vite.config.js  weapons.json
.github/: FUNDING.yml
.github/workflows/: build-artifact.yml  build.yml
exampleFaces/: alfredFace  eustaceFace  iosefkaFace  samuelFace
public/: index.html
save_editor/: .gitignore  Cargo.toml  items.json  offsets.json  testsave  testsave.tags
save_editor/src/: main.rs
save_editor/src/data_handling/: enums.rs  file.rs  inventory.rs  mod.rs  player.rs  save.rs  (+1 more)
save_editor/ui/: index.html
src/: App.css  App.jsx  armors.json  chalices.json  index.css  items.json
src-tauri/: Cargo.toml  armors.json  coverage.sh  items.json  offsets.json  tauri.conf.json  testsave  weapons.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/resources/: armors.json  bosses.json  items.json  offsets.json  upgrades.json  weapons.json
src-tauri/saves/: no_inv_end_save  no_inv_save  noappearancesave0  savetestsave  testexport  testexport0  testexport1  testexport2  testexport3  testsave1  testsave2  testsave3  testsave4  testsave5  testsave6  testsave7  testsave8  testsave9  weaponmods0
src-tauri/src/: lib.rs  main.rs
src-tauri/src/data_handling/: appearance.rs  article.rs  bosses.rs  constants.rs  enums.rs  face.rs  file.rs  inventory.rs  mod.rs  offsets.rs  position.rs  save.rs  slots.rs  stats.rs  upgrades.rs  username.rs  utils.rs
src/components/: AddScreen.jsx  Boss.jsx  Bosses.jsx  ChangeGemScreen.jsx  Character.jsx  EditUpgrade.jsx  EquippedGem.jsx  EquippedGems.jsx  FilterButtons.jsx  FilterComponent.jsx  Inventory.jsx  Item.jsx  Main.jsx  Nav.jsx  Playtime.jsx  ReplaceScreen.jsx  SearchAllitems.jsx  SearchComponent.jsx  Select.jsx  SelectSearch.jsx  ShapeSelector.jsx  SideBar.jsx  Stat.jsx  Stats.jsx  character.css  inventory.css  playtime.css
src/context/: allImages.json  context.js  imagesContext.js  imagesContext.jsx  itemsContext.js
src/utils/: drawCanvas.js  playtime.js  upgrades.js  useDraw.js
(+28 files in other folders)
